corrected code to fix layout issue

--- a/assets/css/contact_style.css
+++ b/assets/css/contact_style.css
@@ -19,9 +19,6 @@ li a {
     text-align: left;
     padding: 10px 0 10px 5px;
     border-bottom: 1.5px inset lightgray;
-    background: white;
-    margin-left: 5px;
-    margin-right: 5px;
 }
 
 .content-section {
@@ -29,7 +26,7 @@ li a {
     height: auto;
     background: whitesmoke;
     border-top: 1.5px outset lightgray;
-    min-height: 700px;
+    min-height: 775px;
     /* Negative indent footer by its height */
     margin: 0 auto -60px;
     /* Pad bottom by footer height */
